manifests/05-backend-deployment.yaml
#manifests/05-backend-deployment.yaml
# Despliegue del servicio backend (Node.js) que se conecta a MySQL
# Este manifiesto crea dos réplicas del backend para alta disponibilidad y balanceo de carga
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: financial-backend
spec:
  replicas: 2  # Se crean 2 pods para alta disponibilidad
  selector:
    matchLabels:
      app: financial-backend
  template:
    metadata:
      labels:
        app: financial-backend
    spec:
      containers:
        - name: backend
          image: miusuario/financial-backend:latest  # Reemplazar con tu usuario DockerHub. Imagen creada con Node.js y Express
          ports:
            - containerPort: 3000  # Puerto expuesto por el contenedor backend
