manifests/09-ingress.yaml
#manifests/09-ingress.yaml
# Recurso Ingress que enruta tráfico HTTP hacia el frontend-service
# El controlador Ingress (como NGINX) debe estar instalado en el clúster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financial-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Reescribe la URL al servicio raíz
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
